# rushhour

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CMakeLists.txt  GoogletestHelper.cmake  InternalHelpers.cmake  PreventInSourceBuilds.cmake  ProjectGit.cmake  ProjectSettings.cmake  UnitTest.cmake
cmddemo/: CMakeLists.txt  run_demo.cpp  run_demo.hpp  threadstopper.cpp  threadstopper.hpp  wheeltask.cpp  wheeltask.hpp
cppsrc/: CMakeLists.txt  astar.hpp  bfs.hpp  board.hpp  dfs.hpp  game.cpp  heuristics.hpp  node.hpp  solution_path.hpp  vehicle.cpp
demos/: CMakeLists.txt
demos/cmdline/: CMakeLists.txt  CmdLineDemo.cpp  CmdLineDemo.hpp  main.cpp
sample_boards/: README.md  sample1.txt  sample10.txt  sample11.txt  sample12.txt  sample13.txt  sample14.txt  sample15.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt  sample7.txt  sample8.txt  sample9.txt
src/: CMakeLists.txt  Game.cpp  Game.hpp  board.cpp  file_input.cpp  file_input.hpp  game.hpp  heuristics.hpp  random_walk.hpp  utility_funcs.hpp  vehicle.hpp
src/GameEngine/: Board.cpp  Board.hpp  CMakeLists.txt
src/GameEngine/Vehicles/: CMakeLists.txt  HorizontalVehicle.cpp  HorizontalVehicle.hpp  PlayerVehicle.cpp  PlayerVehicle.hpp  Vehicle.cpp  Vehicle.hpp  VerticalVehicle.cpp  VerticalVehicle.hpp  defines.hpp
src/GameEngine/Vehicles/PhysicsEngine/: CMakeLists.txt  collision_detected.cpp  collision_detected.hpp
src/Setup/: CMakeLists.txt  Setup.cpp  Setup.hpp  SetupDefaultBoard.cpp  SetupDefaultBoard.hpp  SetupFromCmdLine.cpp  SetupFromCmdLine.hpp  SetupFromFile.cpp  SetupFromFile.hpp
src/Solvers/: AStar.cpp  AStar.hpp  BFS.cpp  BFS.hpp  CMakeLists.txt  DFS.cpp  DFS.hpp  Node.hpp  RandomWalk.cpp  RandomWalk.hpp  Solver.cpp  Solver.hpp  heuristics.cpp  heuristics.hpp
test/: CMakeLists.txt  RushHourTests.cpp  RushHourTests.hpp  UnitTest.cpp  UnitTest.hpp  make.hpp  test_astar.cpp  test_bfs.cpp  test_collision_detected.cpp  test_dfs.cpp  test_get_board_states.cpp  test_heuristic0.cpp  test_is_solution_state.cpp  test_manhattan_distance_1D.cpp  test_movement.cpp  test_next_boards.cpp  test_number_of_obstacles_1D.cpp  test_player_heuristic.cpp  test_print_board.cpp  test_random_walk.cpp  test_setup.cpp
test/GameEngine/: CMakeLists.txt  GameEngineTests.hpp  test_get_board_states.cpp  test_is_solution_state.cpp  test_next_boards.cpp  test_print_board.cpp
test/GameEngine/Vehicles/: CMakeLists.txt  VehiclesTests.hpp  test_movement.cpp
test/GameEngine/Vehicles/PhysicsEngine/: CMakeLists.txt  PhysicsEngineTests.hpp  test_collision_detected.cpp
test/Setup/: CMakeLists.txt  SetupTests.hpp  test_setup.cpp
test/Solvers/: CMakeLists.txt  SolverTests.hpp  test_astar.cpp  test_bfs.cpp  test_dfs.cpp  test_heuristic0.cpp  test_manhattan_distance_1D.cpp  test_number_of_obstacles_1D.cpp  test_player_heuristic.cpp  test_random_walk.cpp
